# raspi-pico-aprs-tnc

./: .gitignore  CMakeLists.txt  README.md
doc/: signal_flow.odg
doc/schematic/: band_pass_filter.sch
doc/schematic_EAGLE/: APRS_Pico_with_Baofeng_UV-5R.sch  band_pass_filter.sch
doc/simulation_LTSpice/: Bandpass_AFSK_1200.asc  Bandpass_AFSK_1200.plt
include/: aprs_pico.h
src/: aprs_pico.c  aprs_pico_beacon_demo.c  aprs_pico_example.c  aprs_pico_tone_test.c
